--- a/Index.html
+++ b/Index.html
@@ -16,13 +16,13 @@
             margin: 0;
         }
         a {
-            text-decoration: none;
+            text-decoration: calbri;
         }
 
         /* Header */
         header {
             background-color: #1e90ff;
-            color: white;
+            color: green;
             text-align: center;
             padding: 25px 20px;
         }
@@ -246,7 +246,7 @@
     <!-- Tip of the Day Banner -->
     <div class="tip-of-the-day">
         <h3>🔥 Tip of the Day 🔥</h3>
-        <p><strong>Match:</strong> Manchester United vs Chelsea</p>
+        <p><strong>Match:</strong> apo vs joe</p>
         <p><strong>Prediction:</strong> Manchester United to win</p>
         <p><strong>Confidence:</strong> High</p>
         <p><strong>Odds:</strong> 2.1</p>
@@ -266,7 +266,7 @@
             <p><strong>Odds:</strong> 3.2</p>
         </div>
         <div class="tip-card">
-            <h3>Bayern Munich vs Dortmund</h3>
+            <h3>sporting vs Dortmund</h3>
             <p><strong>Prediction:</strong> Bayern Munich to win</p>
             <p><strong>Confidence:</strong> High</p>
             <p><strong>Odds:</strong> 1.7</p>
@@ -296,9 +296,9 @@
 <footer>
     &copy; 2025 MOSH SPORTS KAPAPULA. All rights reserved.
     <div class="social-links">
-        <a href="https://wa.me/YOUR_NUMBER" target="_blank" title="WhatsApp">📱</a>
+        <a href="https://wa.me/+256706839362" target="_blank" title="WhatsApp">📱</a>
         <a href="https://facebook.com/YOUR_PROFILE" target="_blank" title="Facebook">📘</a>
-        <a href="https://twitter.com/YOUR_PROFILE" target="_blank" title="Twitter">🐦</a>
+        
     </div>
 </footer>
 
@@ -320,10 +320,10 @@
                 form.style.display = 'none';
                 successMessage.style.display = 'block';
             } else {
-                alert('Oops! There was a problem submitting your form.');
+                alert('Oops! thanks for your response .');
             }
         })
-        .catch(error => alert('Oops! There was a problem submitting your form.'));
+        .catch(success => alert('Thanks for the response .'));
     });
 
     // Hamburger toggle
