Update betting tips for football matches
Signed-off-by: Mosh <joemosh8@gmail.com>

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <h2>Latest Betting Tips</h2>
         <div class="tips">
             <div class="tip">
-                <h3>Football Match 1</h3>
-                <p>Prediction: Team A wins</p>
+                <h3>MIDTYLLAND VS ARHUS</h3>
+                <p>Prediction: OVER 2.5</p>
             </div>
             <div class="tip">
-                <h3>Football Match 2</h3>
-                <p>Prediction: Draw</p>
+                <h3>MANU VS MAN CITY 
+                <p>Prediction: 2</p>
             </div>
             <div class="tip">
-                <h3>Football Match 3</h3>
-                <p>Prediction: Team B wins</p>
+                <h3>ARSENAL VS REAL MADRID</h3>
+                <p>Prediction: BTTS</p>
             </div>
         </div>
     </section>
